--- a/files/.vim/bundle/rc/dein.toml
+++ b/files/.vim/bundle/rc/dein.toml
@@ -122,3 +122,5 @@ repo = 'gosukiwi/vim-atom-dark'
 repo = 'kristijanhusak/vim-hybrid-material'
 [[plugins]]
 repo = 'connorholyday/vim-snazzy'
+[[plugins]]
+repo = 'morhetz/gruvbox'
