--- a/files/.vim/bundle/rc/dein.toml
+++ b/files/.vim/bundle/rc/dein.toml
@@ -71,6 +71,9 @@ rev = 'release'
 on_i = 1
 merged = '0'
 
+[[plugins]]
+repo = 'tpope/vim-fugitive'
+
 # ---------------------------------------
 # denite
 # ---------------------------------------
