--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -10,6 +10,7 @@
     ~/.vim: files/.vim
     ~/.vimbackup: files/.vimbackup
     ~/.vimundo: files/.vimundo
+    ~/.vifm: files/.vifm
     ~/.gitignore: files/.gitignore
     ~/.tigrc: files/.tigrc
     ~/.tmux.conf: files/.tmux.conf
