--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,10 @@ files/.vim/bin/phpctags
 # dein.vim
 files/.vim/bundle/.cache
 files/.vim/bundle/cache_nvim
+files/.vim/bundle/cache_vi
 files/.vim/bundle/state_nvim.vim
 files/.vim/bundle/cache_vim
 files/.vim/bundle/state_vim.vim
+files/.vim/bundle/state_vi.vim
 files/.vim/bundle/repos
 files/.vim/init.vim
