--- a/files/.vim/bundle/rc/dein_lazy.toml
+++ b/files/.vim/bundle/rc/dein_lazy.toml
@@ -145,6 +145,11 @@ on_ft = ['elm']
 [[plugins]]
 repo = 'reasonml-editor/vim-reason-plus'
 on_ft = ['reason']
+
+[[plugins]]
+repo = 'rescript-lang/vim-rescript'
+on_ft = ['rescript']
+
 [[plugins]]
 repo = 'hashivim/vim-terraform'
 on_ft = ['tf', 'terraform']
