--- a/files/.vim/coc-settings.json
+++ b/files/.vim/coc-settings.json
@@ -19,5 +19,6 @@
         }
     },
     "coc.preferences.formatOnType": true,
+    "coc.preferences.formatOnSaveFiletypes": ["typescript", "markdown"],
     "eslint.enable": false
 }
