--- a/files/.vim/bundle/rc/dein_lazy.toml
+++ b/files/.vim/bundle/rc/dein_lazy.toml
@@ -67,22 +67,22 @@ hook_add = '''
 '''
 
 # Language Support: Go
-[[plugins]]
-repo = 'fatih/vim-go'
-on_ft = 'go'
-hook_source = '''
-  let g:go_fmt_command = 'goimports'
-  let s:goargs = expand('%:p:h:s#\v^.+/src/##')
-  let g:neomake_go_errcheck_maker = {
-    \ 'args': ['-abspath', s:goargs],
-    \ 'append_file': 0,
-    \ 'errorformat': '%f:%l:%c:\ %m, %f:%l:%c\ %#%m',
-    \ }
-  let g:neomake_go_enabled_makers = ['go', 'golint', 'govet', 'errcheck']
-  " LSPに任せる機能をOFFにする
-  let g:go_def_mapping_enabled = 0
-  let g:go_doc_keywordprg_enabled = 0
-'''
+# [[plugins]]
+# repo = 'fatih/vim-go'
+# on_ft = 'go'
+# hook_source = '''
+#   let g:go_fmt_command = 'goimports'
+#   let s:goargs = expand('%:p:h:s#\v^.+/src/##')
+#   let g:neomake_go_errcheck_maker = {
+#     \ 'args': ['-abspath', s:goargs],
+#     \ 'append_file': 0,
+#     \ 'errorformat': '%f:%l:%c:\ %m, %f:%l:%c\ %#%m',
+#     \ }
+#   let g:neomake_go_enabled_makers = ['go', 'golint', 'govet', 'errcheck']
+#   " LSPに任せる機能をOFFにする
+#   let g:go_def_mapping_enabled = 0
+#   let g:go_doc_keywordprg_enabled = 0
+# '''
 [[plugins]]
 repo = 'fatih/molokai'
 [[plugins]]
