--- a/files/.vim/bundle/rc/dein_lazy.toml
+++ b/files/.vim/bundle/rc/dein_lazy.toml
@@ -84,6 +84,9 @@ hook_add = '''
 #   let g:go_doc_keywordprg_enabled = 0
 # '''
 [[plugins]]
+repo = 'mattn/vim-goimports'
+on_ft = 'go'
+[[plugins]]
 repo = 'fatih/molokai'
 [[plugins]]
 repo  = 'zchee/deoplete-go'
