--- a/files/.vim/bundle/rc/dein_lazy.toml
+++ b/files/.vim/bundle/rc/dein_lazy.toml
@@ -16,7 +16,7 @@ on_ft = ['vue']
 
 [[plugins]]
 repo = 'pangloss/vim-javascript'
-on_ft = ['javascript', 'javascript.jsx', 'typescript', 'typescript.tsx', 'vue']
+on_ft = ['javascript', 'javascript.jsx', 'typescript', 'typescriptreact', 'vue']
 
 [[plugins]]
 repo = 'othree/yajs.vim'
@@ -31,25 +31,25 @@ on_ft = ['javascript', 'javascript.jsx']
 # Language Support: TypeScript
 [[plugins]]
 repo  = 'Quramy/tsuquyomi'
-on_ft = ['typescript', 'typescript.tsx']
+on_ft = ['typescript', 'typescriptreact']
 [[plugins]]
 repo  = 'jason0x43/vim-js-indent'
-on_ft = ['typescript', 'typescript.tsx']
+on_ft = ['typescript', 'typescriptreact']
 
 [[plugins]]
 repo = 'HerringtonDarkholme/yats.vim'
-on_ft = ['typescript', 'typescript.tsx']
+on_ft = ['typescript', 'typescriptreact']
 [[plugins]]
 repo = 'peitalin/vim-jsx-typescript'
-on_ft = ['typescript', 'typescript.tsx']
+on_ft = ['typescript', 'typescriptreact']
 
 [[plugins]]
 repo = 'yuezk/vim-js'
-on_ft = ['typescript', 'typescript.tsx']
+on_ft = ['typescript', 'typescriptreact']
 
 [[plugins]]
 repo = 'maxmellon/vim-jsx-pretty'
-on_ft = ['typescript', 'typescript.tsx']
+on_ft = ['typescript', 'typescriptreact']
 
 # Language Support: PHP
 [[plugins]]
