--- a/files/.alacritty.yml
+++ b/files/.alacritty.yml
@@ -12,7 +12,7 @@
   # available, otherwise `xterm-256color` is used.
   #TERM: alacritty
 
-#window:
+window:
   # Window dimensions (changes require restart)
   #
   # Specified in number of columns/lines, not pixels.
@@ -20,7 +20,7 @@
   #dimensions:
   #  columns: 0
   #  lines: 0
-
+  opacity: 0.95
   # Window position (changes require restart)
   #
   # Specified in number of pixels.
@@ -307,12 +307,6 @@
   #     args: ["Hello, World!"]
   #
   #command: None
-
-# Background opacity
-#
-# Window opacity as a floating point number from `0.0` to `1.0`.
-# The value `0.0` is completely transparent and `1.0` is opaque.
-window.opacity: 0.95
 
 #selection:
   #semantic_escape_chars: ",│`|:\"' ()[]{}<>\t"
