--- a/files/.vim/coc-settings.json
+++ b/files/.vim/coc-settings.json
@@ -31,6 +31,7 @@
         "completeUnimported": true
     },
     "typescript.format.enabled": false,
+    "editor.inlayHints.enabled": false,
     "rust-analyzer.inlayHints.enable": false,
     "rust-analyzer.inlayHints.parameterHints.enable": false,
     "rust-analyzer.inlayHints.typeHints.enable": false,
