--- a/files/.vim/coc-settings.json
+++ b/files/.vim/coc-settings.json
@@ -35,5 +35,6 @@
     "rust-analyzer.inlayHints.enable": false,
     "rust-analyzer.inlayHints.parameterHints.enable": false,
     "rust-analyzer.inlayHints.typeHints.enable": false,
-    "snippets.ultisnips.pythonPrompt": false
+    "snippets.ultisnips.pythonPrompt": false,
+    "svelte.enable-ts-plugin": false
 }
