--- a/files/.vim/bundle/rc/dein.toml
+++ b/files/.vim/bundle/rc/dein.toml
@@ -123,3 +123,7 @@ merged = '0'
 repo = 'junegunn/fzf.vim'
 [[plugins]]
 repo = 'antoinemadec/coc-fzf'
+
+
+[[plugins]]
+repo = 'neovim/nvim-lspconfig'
