--- a/files/.vim/bundle/rc/dein.toml
+++ b/files/.vim/bundle/rc/dein.toml
@@ -127,3 +127,30 @@ repo = 'antoinemadec/coc-fzf'
 
 [[plugins]]
 repo = 'neovim/nvim-lspconfig'
+# https://zenn.dev/kawarimidoll/articles/2b57745045b225
+hook_add = '''
+lua << EOF
+local nvim_lsp = require('lspconfig')
+local is_node_dir = function()
+  return nvim_lsp.util.root_pattern('package.json')(vim.fn.getcwd())
+end
+
+-- ts_ls
+local ts_opts = {}
+ts_opts.on_attach = function(client)
+  if not is_node_dir() then
+    client.stop(true)
+  end
+end
+nvim_lsp.ts_ls.setup(ts_opts)
+
+-- denols
+local deno_opts = {}
+deno_opts.on_attach = function(client)
+  if is_node_dir() then
+    client.stop(true)
+  end
+end
+nvim_lsp.denols.setup(deno_opts)
+EOF
+'''
